--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -1,5 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<script type="text/javascript">
+
+    function resizeImage(id) {
+        var img = document.getElementById("img_"+id);
+        if(img.style.height ==="100%") {
+            img.style.height = "170px";
+            img.style.width = "100px";
+        } else {
+            img.style.height = "100%";
+            img.style.width = "100%";
+        }
+    }
+</script>
+
+<div class="review-wrap">
+	<h1> {{ book_title }}</h1>
+	<img id="img_{{ forloop.counter }}" src="{{ book_photo.url }}" width=100 height=170 onclick="resizeImage({{ forloop.counter }})">
+
+	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
+		<h5> {{ book_genre }} </h5>
+		<p> {{ book_desc }} </p>
+		<h6> Published by {{ book_publisher }} on {{ book_pubdate }} </h6>
+	</blockquote>
+	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
+		<h5> {{ book_author }} </h5>
+		<p> {{ book_authordesc }} </p>
+
+	</blockquote>
+</div>
+
 <div class="review-wrap">
 	<h1>Reviews for {{ book_title }}!</h1>
 	<div>
