--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -2,9 +2,8 @@
 {% block content %}
 
 <script type="text/javascript">
-
     function resizeImage(id) {
-        var img = document.getElementById("img_"+id);
+        var img = document.getElementById(id);
         if(img.style.height ==="100%") {
             img.style.height = "170px";
             img.style.width = "100px";
@@ -17,7 +16,8 @@
 
 <div class="review-wrap">
 	<h1> {{ book_title }}</h1>
-	<img id="img_{{ forloop.counter }}" src="{{ book_photo.url }}" width=100 height=170 onclick="resizeImage({{ forloop.counter }})">
+
+	<img id="1" src="{{ book_photo.url }}" width=100 height=170 onclick="resizeImage(1)">
 
 	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
 		<h5> {{ book_genre }} </h5>
