Completed user story 44
Added buttons for moving items between wishlists and adding items to cart from wishlist page.

--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -10,6 +10,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'css/review-style.css' %}">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
         <!-- Optional JavaScript -->
         <script>
@@ -30,6 +31,13 @@
             <title>GeekText</title>
 
         {% endif %}
+
+	<style type="text/css">
+	<!--
+ 	.tab { margin-left: 40px; }
+	-->
+	</style>
+
 
     </head>
 
