--- a/wishlist/templates/wishlist/wishlistname_list.html
+++ b/wishlist/templates/wishlist/wishlistname_list.html
@@ -5,30 +5,45 @@
   <h2>Wishlist view!</h2>
     <ol>
         {% for wishlistname in object_list %}
-	{% if wishlistname.username == user.username %}
-            <li><h5>{{ wishlistname.wish_list_name_0 }}</h5><ul>
+	{% if wishlistname.username == user.username %}<p>
+            <li><h5>{{ wishlistname.wish_list_name_0 }}</h5><ul class="list-group">
                 {% for wishlistentrie in view.entries %}
                     {% if wishlistentrie.home == '0' and user.username == wishlistentrie.username %}
-                        <li>{{ wishlistentrie.book }}</li>
+                        <li style="float:left;" class="list-group-item">{{ wishlistentrie.book }} <font style="float:right;" color="#007BFF">Transfer:
+			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
+			
+			</font></li>
                     {% endif %}
-                {% endfor %}</ul></li>
+                {% endfor %}</ul></li></p><br><br>
 
-            {% if wishlistname.wish_list_name_1 != null %}
-                <li><h5>{{ wishlistname.wish_list_name_1 }}</h5><ul>
+            {% if wishlistname.wish_list_name_1 != null %}<p>
+                <li><h5>{{ wishlistname.wish_list_name_1 }}</h5><ul class="list-group">
                 {% for wishlistentrie in view.entries %}
                     {% if wishlistentrie.home == '1' and user.username == wishlistentrie.username %}
-                        <li>{{ wishlistentrie.book }}</li>
+                        <li style="float:left;" class="list-group-item">{{ wishlistentrie.book }} <font style="float:right;" color="#007BFF">Transfer:
+			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
+			
+			</font></li>
                     {% endif %}
-                {% endfor %}</ul></li>
+                {% endfor %}</ul></li></p><br><br>
             {% endif %}
 
-            {% if wishlistname.wish_list_name_2 != null %}
-                <li><h5>{{ wishlistname.wish_list_name_2 }}</h5><ul>
+            {% if wishlistname.wish_list_name_2 != null %}<p>
+                <li><h5>{{ wishlistname.wish_list_name_2 }}</h5><ul class="list-group">
                 {% for wishlistentrie in view.entries %}
                     {% if wishlistentrie.home == '2' and user.username == wishlistentrie.username %}
-                        <li>{{ wishlistentrie.book }}</li>
+                        <li style="float:left;" class="list-group-item">{{ wishlistentrie.book }} <font style="float:right;" color="#007BFF">Transfer:
+			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
+			<a href="{% url 'transwish' wishlistentrie.id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
+			
+			</font></li>
                     {% endif %}
-                {% endfor %}</ul></li>
+                {% endfor %}</ul></li></p>
             {% endif %}
 	{% endif %}
         {% endfor %}
