--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -100,13 +100,13 @@
 			<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
 				<cite title="Source Title">
 					{% if review.anonymous %}
-					<img class="rounded-circle account-img" src="/static/images/ReviewSectionImages/anon.png" width="50" height="50">
+					<img class="rounded-circle account-img" src="/static/images/anon.png" width="50" height="50">
 						Anonymous
 					{% else %}
 						{% if review.author.profile.profilePic.url %}
 							<img class="rounded-circle account-img" src="{{ review.author.profile.profilePic.url }}" width="50" height="50">
 						{% else %}
-							<img class="rounded-circle account-img" src="/static/images/ReviewSectionImages/anon.png" width="50" height="50">
+							<img class="rounded-circle account-img" src="/static/images/anon.png" width="50" height="50">
 						{% endif %}
 						{{ review.author|capfirst }}
 					{% endif %}
