--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -115,11 +115,7 @@
 				<p class="mb-0">{{ review.content }}</p>
 				<p class="mb-0">{{ review.num_likes }} Like(s)</p>
 				{% if user.is_authenticated %}
-					<form method="get">
-						{% csrf_token %}
-						<input type="hidden" name="review_id" value="{{review.id}}" />
-						<input type="submit" value="Like" name="Like" id="like-btn">
-					</form>
+					<a href="{% url 'likeReview' review.id %}">Like/Dislike</a>
 				{% endif %}
 			</blockquote>
     	{% endfor %}
