--- a/cart/templates/carthome.html
+++ b/cart/templates/carthome.html
@@ -38,10 +38,23 @@
             {% for book in saveforlater.items.all %}
             <tr>
             <td>
-                <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 >
+                    <a href="{% url 'reviews' book.id book.title %}">
+                    <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 >
+                    </a>
             </td>
             <td>
                 <h6><font color="green"> {{book}} </h6></font> <b>Author:</b> {{book.author}}
+            
+                <p>
+                        <br>
+                        <br>
+                        
+                        Add to Wishlists:
+        <a href="{% url 'addtowish' book.id 0 %}?from={{request.path|urlencode}}">#1</a>, 
+        <a href="{% url 'addtowish' book.id 1 %}?from={{request.path|urlencode}}">#2</a>, 
+        <a href="{% url 'addtowish' book.id 2 %}?from={{request.path|urlencode}}">#3</a>
+    
+                    </p>
             </td>
             <td>
                 <b>Price:</b> $ {{book.price}}
@@ -72,10 +85,23 @@
             {% for book in nonemptycart.items.all %}
             <tr>
             <td>
+                    <a href="{% url 'reviews' book.id book.title %}">
                 <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 >
+                    </a>
             </td>
             <td>
                 <h6><font color="green"> {{book}} </h6></font> <b>Author:</b> {{book.author}}
+                <p>
+                    <br>
+                    <br>
+                    
+                    Add to Wishlists:
+    <a href="{% url 'addtowish' book.id 0 %}?from={{request.path|urlencode}}">#1</a>, 
+    <a href="{% url 'addtowish' book.id 1 %}?from={{request.path|urlencode}}">#2</a>, 
+    <a href="{% url 'addtowish' book.id 2 %}?from={{request.path|urlencode}}">#3</a>
+
+                </p>
+            
             </td>
             <td>
                 <b>Price:</b> $ {{book.price}}
@@ -132,10 +158,25 @@
             {% for book in saveforlater.items.all %}
             <tr>
             <td>
+                    <a href="{% url 'reviews' book.id book.title %}">
                 <img id="img_{{ forloop.counter }}" src="{{ book.photo.url }}" width=100 height=170 >
+                    </a>
             </td>
             <td>
                 <h6><font color="green"> {{book}} </h6></font> <b>Author:</b> {{book.author}}
+                <p>
+                        <br>
+                        <br>
+                        
+                        Add to Wishlists:
+        <a href="{% url 'addtowish' book.id 0 %}?from={{request.path|urlencode}}">#1</a>, 
+        <a href="{% url 'addtowish' book.id 1 %}?from={{request.path|urlencode}}">#2</a>, 
+        <a href="{% url 'addtowish' book.id 2 %}?from={{request.path|urlencode}}">#3</a>
+    
+                    </p>
+                
+            
+            
             </td>
             <td>
                 <b>Price:</b> $ {{book.price}}
