--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -25,7 +25,9 @@
 		<h6> Published by {{ book_publisher }} on {{ book_pubdate }} </h6>
 	</blockquote>
 	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
-		<h5> {{ book_author }} </h5>
+		<h5>
+			<a href="{% url 'authors' book_author.id %}"> {{ book_author }}</a>
+		</h5>
 		<p> {{ book_authordesc }} </p>
 
 	</blockquote>
