--- a/bookstore/templates/bookstore/authors.html
+++ b/bookstore/templates/bookstore/authors.html
@@ -7,6 +7,12 @@
 <body>
     <h1>
         {{ author.name }}
+
+        {% for book in books %}
+        <li>
+            {{ book.title }}
+        </li>
+        {% endfor %}
     </h1>
 </body>
 </html>
