--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -15,10 +15,9 @@
 </script>
 
 <div class="review-wrap">
-	<h1> {{ book_title }}</h1>
-
-	<img id="1" src="{{ book_photo.url }}" width=100 height=170 onclick="resizeImage(1)">
-	<p></p>
+	<center><h1> {{ book_title }}</h1></center>
+	<center><img id="1" src="{{ book_photo.url }}" width=100 height=170 onclick="resizeImage(1)"></center>
+	<br>
 	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
 		<h5> {{ book_genre }} </h5>
 		<p> {{ book_desc }} </p>
