--- a/wishlist/templates/wishlist/wishlistname_list.html
+++ b/wishlist/templates/wishlist/wishlistname_list.html
@@ -13,7 +13,7 @@
 			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
-			
+			<a href="{% url 'delwish' wishlistentrie.id %}?from={{request.path|urlencode}}"><i class="material-icons" style="font-size:22px;color:red">clear</i></a>
 			</font></li>
                     {% endif %}
                 {% endfor %}</ul></li></p><br><br>
@@ -26,7 +26,7 @@
 			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
-			
+			<a href="{% url 'delwish' wishlistentrie.id %}?from={{request.path|urlencode}}"><i class="material-icons" style="font-size:22px;color:red">clear</i></a>
 			</font></li>
                     {% endif %}
                 {% endfor %}</ul></li></p><br><br>
@@ -40,7 +40,7 @@
 			<a href="{% url 'addtocart' wishlistentrie.book.id %}?from={{request.path|urlencode}}"><i class="material-icons">add_shopping_cart</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
 			<a href="{% url 'transwish' wishlistentrie.id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
-			
+			<a href="{% url 'delwish' wishlistentrie.id %}?from={{request.path|urlencode}}"><i class="material-icons" style="font-size:22px;color:red">clear</i></a>
 			</font></li>
                     {% endif %}
                 {% endfor %}</ul></li></p>
