--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -25,10 +25,16 @@
 	</blockquote>
 	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
 		<center>
+			<span class="font-weight-bold">
+                            ${{ book_price }}
+			</span>
+			<a href="{% url 'addtocart' book_id %}?from={{request.path|urlencode}}">Add to Cart</a>
+		</center>
+		<center>
 			Add to Wishlist:
-    	<a href="{% url 'addtowish' book_id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
-    	<a href="{% url 'addtowish' book_id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
-    	<a href="{% url 'addtowish' book_id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
+    		<a href="{% url 'addtowish' book_id 0 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_1</i></a>
+    		<a href="{% url 'addtowish' book_id 1 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_2</i></a>
+    		<a href="{% url 'addtowish' book_id 2 %}?from={{request.path|urlencode}}"><i class="material-icons">filter_3</i></a>
 		</center>
 	</blockquote>
 	<blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
