--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -3,32 +3,33 @@
 {% block content %}
     <div class="content-section">
         <h1>Profile</h1>
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-2">
-                        <img class="rounded-circle img-thumbnail" src="{{ user.profile.profilePic.url }}" width="150" height="150">
-                    </div>
-                    <div class="col-md-10">
-                        <h3 class="account-heading">{{ user.username }}</h3>
-                        <p>{{ user.email }}</p>
-                        <p>{{ user.first_name}} {{user.last_name}}</p>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="{{ user.profile.profilePic.url }}" alt="Card image cap">
+                </div>
+                <div class="col-lg-9">
+                    <div class="card-body">
+                        <h4>{{ user.username }}</h4>
+                        <p>Email: {{ user.email }}</p>
+                        <p>Name: {{ user.first_name}} {{user.last_name}}</p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                            Edit profile
+                        </button>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="card collapse mb-3" id="collapseExample">
+            <div class="card-body">
                 <form method="POST" endctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="from-group">
                         <legend>Edit Profile Info</legend>
-                        <div class="border-top">
-                                {{ accUpdateForm|crispy }}
-                                {{ proUpdateForm|crispy }}
-                                <button class="btn btn-outline-info mb-3" type="submit">Update</button>
-                        </div>
-                    </div>
-    
-                    <div class="border-top pt-3 mb-3">
-                        <small>Already have an account?</small>
-                        <a class="mr-3 btn btn-primary" href="{% url 'login' %}">Log In</a>
+                            {{ accUpdateForm|crispy }}
+                            {{ proUpdateForm|crispy }}
+                            <button class="btn btn-success mb-3" type="submit">Update</button>
                     </div>
                 </form>
             </div>
