Added "average rating" on all needed pages.
made other things pretty.

--- a/bookstore/templates/bookstore/authors.html
+++ b/bookstore/templates/bookstore/authors.html
@@ -55,6 +55,7 @@ ul {
 
                     </center>
                     <center>
+                        <h5>Average Rating: {{ book.aveRating }}</h5>
                         <span class="font-weight-bold">
                             ${{ book.price }}
                         </span>
