books is pretty

--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -96,7 +96,6 @@
         </nav>
 
         <div class="container">
-
             {% if messages %}
                 {% for message in messages %}
                     <!-- Modal -->
@@ -125,6 +124,9 @@
             {% block content %}
             {% endblock content %}
         </div>
+	</div>
+	</div>
+
 
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
