--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -2,6 +2,8 @@
 {% block content %}
 {% load staticfiles %}
 
+
+
 <head>
     <style>
         p.ex1 {
@@ -13,18 +15,32 @@
           margin-left: 35px;
         }
 
-        li {
-            display: inline;
+ 	li {
+            display: inline-block;
+            -webkit-column-break-inside: avoid;
+            page-break-inside: avoid;
+            break-inside: avoid;
         }
 
-        div {
-          -webkit-columns: 2; /* Chrome, Safari, Opera */
-          -moz-columns: 2; /* Firefox */
-          columns: 2;
+        .divbooks {
+          -webkit-column-count: 2; /* Chrome, Safari, Opera */
+          -moz-column-count: 2; /* Firefox */
+          column-count: 2;
+	  -webkit-column-break-inside: avoid;
+            page-break-inside: avoid;
+            break-inside: avoid;
         }
+     
     </style>
 </head>
 
+
+
+<body>
+<div class="container">
+<center>
+<div class="row-fluid">
+<div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
     <button type="button">Sort by Title</button>
     <button type="button">Sort by Author</button>
@@ -32,26 +48,27 @@
     <button type="button">Sort by Rating</button>
     <button type="button">Sort by Publish Date</button>
 
-
-    <div class="pagination">
-
+    
     <span class="step-links">
         {% if books.has_previous %}
-            <a href="?page={{ books.previous_page_number }}">previous</a>
+            <a href="?page={{ books.previous_page_number }}">Previous</a>
         {% endif %}
 
+	
         <span class="current">
-            Page {{ books.number }} of {{ books.paginator.num_pages }}.
+            (Page {{ books.number }} of {{ books.paginator.num_pages }})
         </span>
+	
 
         {% if books.has_next %}
-            <a href="?page={{ books.next_page_number }}">next</a>
+            <a href="?page={{ books.next_page_number }}">Next</a>
         {% endif %}
     </span>
+	</blockquote>
 
-    </div>
-</blockquote>
 
+<div class="divbooks">
+<div class="span10">
 {% for book in books %}
     <center>
         <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
@@ -90,3 +107,10 @@
     </center>
 {% endfor %}
 {% endblock content %}
+</div>
+</div>
+</div>
+
+
+</div>
+</body>
