--- a/bookstore/templates/bookstore/books-sciencefictionabc.html
+++ b/bookstore/templates/bookstore/books-sciencefictionabc.html
@@ -45,7 +45,7 @@
 <center>
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
-    <a href="{% url 'Fantasyabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'Sciencefiction' %}" class="button">Sort by Price</a>
 
     
     <span class="step-links">
