--- a/bookstore/templates/bookstore/books-nonfiction.html
+++ b/bookstore/templates/bookstore/books-nonfiction.html
@@ -46,7 +46,7 @@
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
     <a href="{% url 'Nonfictionabc' %}" class="button">Sort by Title</a>
-
+    <a href="{% url 'Nonfictionp' %}" class="button">Show 20 Results</a> 
     
     <span class="step-links">
         {% if books.has_previous %}
