--- a/bookstore/templates/bookstore/books-fantasyp.html
+++ b/bookstore/templates/bookstore/books-fantasyp.html
@@ -43,10 +43,10 @@
 </select>
 
 <center>
-<div class="span2">
+<div class="span12">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
-    <a href="{% url 'Satireabc' %}" class="button">Sort by Title</a>
-    <a href="{% url 'Satirep' %}" class="button">Show 20 Results</a> 
+    <a href="{% url 'Fantasyabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'Fantasy' %}" class="button">Show 10 Results</a>
     
     <span class="step-links">
         {% if books.has_previous %}
