--- a/bookstore/templates/bookstore/books-horror.html
+++ b/bookstore/templates/bookstore/books-horror.html
@@ -46,6 +46,7 @@
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
     <a href="{% url 'Horrorabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'Horrorp' %}" class="button">Show 20 Results</a> 
     
     <span class="step-links">
         {% if books.has_previous %}
