--- a/bookstore/templates/bookstore/books-nonfictionp.html
+++ b/bookstore/templates/bookstore/books-nonfictionp.html
@@ -45,8 +45,8 @@
 <center>
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
-    <a href="{% url 'Satireabc' %}" class="button">Sort by Title</a>
-    <a href="{% url 'Satirep' %}" class="button">Show 20 Results</a> 
+    <a href="{% url 'Nonfictionabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'Nonfiction' %}" class="button">Show 10 Results</a> 
     
     <span class="step-links">
         {% if books.has_previous %}
