--- a/bookstore/templates/bookstore/books.html
+++ b/bookstore/templates/bookstore/books.html
@@ -46,6 +46,7 @@
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
     <a href="{% url 'bookstore-booksabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'bookstore-booksp' %}" class="button">Show 20 Results</a>
 
     
     <span class="step-links">
