--- a/bookstore/templates/bookstore/booksrate3.html
+++ b/bookstore/templates/bookstore/booksrate3.html
@@ -50,8 +50,9 @@
 <center>
 <div class="span2">
 <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
-    <a href="{% url 'bookstore-books' %}" class="button">Sort by Price</a>
-    <a href="{% url 'bookstore-booksabcp' %}" class="button">Show 20 Results</a>
+    <a href="{% url 'bookstore-booksabc' %}" class="button">Sort by Title</a>
+    <a href="{% url 'bookstore-booksp' %}" class="button">Show 20 Results</a>
+
     
     <span class="step-links">
         {% if books.has_previous %}
@@ -73,7 +74,7 @@
 
 
 <div class="span10">
-{% for book in books|dictsort:"title" %}
+{% for book in books%}
     <center>
         <blockquote class="blockquote" style="background-color:#f2f2f2;border-radius: 15px;padding:2px;">
                 <p class="ex1">
